--- a/123132/index.html
+++ b/123132/index.html
@@ -15,7 +15,7 @@
 			<li><a href="index.html"> HOME </a></li>
 			<div class="clear"></div>
 		</ul>
-		
+		<div class="clear"></div>
 
 	</header>
 
